<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/channel_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/channelEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/channel_hint"
            android:textColor="@color/red"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:onClick="shareLocation"
        android:padding="40dp"
        android:text="@string/share_button"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_blue" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:onClick="followLocation"
        android:padding="40dp"
        android:text="@string/follow_button"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/gmaps"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_blue" />

        <Switch
            android:id="@+id/switchMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/mapbox"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_blue" />
    </LinearLayout>

</LinearLayout>